# pokeapi-hs

./: .gitignore  ChangeLog.md  ChangeLog.md.save0  Games-Pokemon-Pokeapi-Types.html  LICENSE  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  mini_Games-Pokemon-Pokeapi-Types.html  pokeapi.cabal  pokeapi.haddock
scripts/: deploy-haddock-manually.sh
src/: extract_types.hs
src/Games/Pokemon/Pokeapi/: Types.hs
