name:                pokeapi
version:             1.0.0
synopsis:            pokeapi.co types and client
-- description:
homepage:            https://github.com/relrod/pokeapi-hs
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Games.Pokemon.Pokeapi.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , aeson
                     , lens
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
